--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   ],
   "scripts": {
     "core": "yarn workspace @headlessui/core",
+    "browser": "yarn workspace browser-tests",
     "react": "yarn workspace @headlessui/react",
     "react-playground": "yarn workspace playground-react dev",
     "playground-react": "yarn workspace playground-react dev",
