--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "prettier-plugin-tailwindcss": "^0.1.4",
     "rimraf": "^3.0.2",
     "tslib": "^2.3.1",
+    "turbo": "^1.6.3",
     "typescript": "^4.5.4"
   }
 }
