update turbo config for dev and build

--- a/turbo.json
+++ b/turbo.json
@@ -1,8 +1,12 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "pipeline": {
-    "dev": {
+    "build": {
       "dependsOn": ["^build"],
+      "outputs": [".next/**"]
+    },
+    "dev": {
+      "dependsOn": ["build"],
       "cache": false
     }
   }
